refactor: 페이징 정상적으로 처리되게끔 수정